public/styles/styles.css
.list-group-item {
  line-height: 2.5;
}
body {
  background-image: url(../images/Unique_World_Map_d.jpg);
}
.navRow{
  width: 100%;
}
nav {
height: 150px;
}
.langRow1 {
  position: relative;
  background-color: #cdf3f0;
  z-index: 2;
  /* opacity: 0.6; */
  padding-bottom: 20px;
  font-family: 'Nunito', sans-serif;
 color: rgb(75, 77, 77);
}


.catRow2 {
  font-family: 'Nunito', sans-serif;
  background-color:  #cdf3f0;
  padding-bottom: 20px;
  color: rgb(75, 77, 77);
}

.bg-dark {
  background-color: #35acbd !important;

}
nav a {
  color: white;
}
.link1 {
  
  color: aliceblue !important;
}
.headTitle {
  color: white;
  font-family: "Playfair Display", serif;
}

.searchBox { 
  width: 100%;
  
}
.searchBut {
  right: -70px;
  position: absolute;
  top: -1px;
  background-color: #425de6!important;
} 

.search_idiom_submit {

  background-color: #425de6!important;
}

/* .worldimg {
  width: 100%;
  height: 470px;
  
  background-repeat: no-repeat;
  background-position: center center, left top;
} */

/* .inner-box {
  z-index: 2;
  width: 50%;
  height: 400px;
  left: 261px;
  top: 135px;
  background-color: #35acbd;
} */


h6 {
  font-weight: bold;
  color: white;
  margin: 20px;
}
p {
  color: white;
  margin: 20px;
}

column1{
  display: inline-flex;
  right: 4px;
  top: -5px
}

.column3{
  display: inline-flex;
  left: 101px;
  top: 8px;
}
.column2{
  display: inline-flex;
  left: 27px;
}

footer {
  background-color: #35acbd !important;
  color: white;
  width: 100%;
  position: fixed;
  bottom: 0px;
  text-align: center;
  font-size: 8px;
  font-family: "Playfair Display", serif;
}
.wrapperBox1{
  width: 100%;
  background-color: #d8e1e2;
}
/* haddassah CSS */
body{
  font-family: 'Quicksand', sans-serif;
}
.roundButton {
  border-radius: 12px;
  background-color: #35acbd !important;
}




/* @media (max-width: 979px){
.headTitle {
    width: 200px;
    float: right;
}
.link1 {
  width: 100%;
}
}

@media (max-width: 768px){
  .headTitle {
      width: 200px;
      float: right;
  }
  .link1 {
    width: 80%;
  }
  }
  @media (max-width: 567px){
    .headTitle {
        width: 200px;
        float: right;
    }
    .link1 {
      width: 50%;
        float: right;
    }
    } */

